--- a/h7.html
+++ b/h7.html
@@ -4,15 +4,21 @@
 <title>
 online_book_store
 </title>
+
+<style type="text/css">
+h2{
+color:blue;
+}
+</style>
 </head>
 
 <body>
-<h2> Registration Form </h2>
+<h2 ALIGN="CENTER"> Registration Form </h2>
 
 
 <form action=" " method=" "> 
 
-<table border="10" align="center" >
+<table>
 
 <tr>
 <label for="Name"> Name:</label>
